# zealouspy

./: .gitignore  README.md  pyproject.toml  requirements.txt
.circleci/: config.yml
src/zealous/: __init__.py
src/zealous/api/: __init__.py  handlers.py  middleware.py
src/zealous/models/: __init__.py  project.py  task.py  user.py
src/zealous/services/: __init__.py  analytics_service.py  notification_service.py  task_service.py  user_service.py
src/zealous/utils/: __init__.py  crypto.py  formatters.py  validators.py
tests/: __init__.py  conftest.py
tests/unit/: test_analytics_service.py  test_failing_demo.py  test_flaky_demo.py  test_formatters.py  test_slow_demo.py  test_task.py  test_task_service.py  test_user.py  test_user_service.py  test_validators.py
